# immutable

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  README.md
include/immutable/: slice.hpp  string.hpp  string_view.hpp
include/immutable/details/: basic_slice.hpp  basic_string.hpp  basic_string_range.hpp  basic_string_view.hpp  literal_string.hpp
include/immutable/details/impl/: basic_slice.hpp  basic_string.hpp  basic_string_io.hpp  basic_string_range.hpp  basic_string_view.hpp
include/ist/: string.hpp
include/ist/details/: basic_slice.hpp  basic_string.hpp  basic_string_range.hpp  basic_string_view.hpp  literal_string.hpp
include/ist/details/impl/: basic_slice.hpp  basic_string.hpp  basic_string_io.hpp  basic_string_range.hpp  basic_string_view.hpp
include/tj/: string.hpp
include/tj/details/: basic_slice.hpp  basic_string.hpp  basic_string_range.hpp  basic_string_view.hpp  literal_string.hpp
include/tj/details/impl/: basic_slice.hpp  basic_string.hpp  basic_string_io.hpp  basic_string_range.hpp  basic_string_view.hpp
tests/: CMakeLists.txt  compile_time_tests.hpp  main.test.cpp  slice.test.cpp  string.test.cpp  string_view.test.cpp
